--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -15,11 +15,16 @@
   grid-column: 1/-1;
 }
 
+#seguros .seguros {
+  padding-top: 0px;
+}
+
 .seguros-item {
   background-color: var(--cor-12);
   padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 4px;
 }
 
 .seguros-item h3 {
@@ -52,10 +57,9 @@ content: "";
 display: inline-block;
 width: 13px;
 height: 9px;
-background-image: url(../../img/icones/lista.svg);
+background-image: url("../../img/icones/lista.svg");
 position: absolute;
 left: -21px;
-
 }
 
 .seguros-item a {
