--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
 @import "./utilidades/componente.css";
+@import "./utilidades/formulario.css";
 
 /* Global */
 @import "./global/header.css";
@@ -18,13 +19,28 @@
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css";
 
+/* Bicicleta */
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
+
 /*Seguros*/
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
 
+/*contato*/
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
+
+/*orcamento*/
+@import "./orcamento/orcamento.css";
+
+
 /*termos*/
 @import "./termos/termos.css"
+
+
 
 
 
